package edu.temple.homerecognition;

import android.util.Pair;

public class House {
    // database fields
    public String imagePath;
    public String style;
    public Pair location;
    public String date;
    public String time;
}
