@startuml

title __HOMERECOGNITION's Class Diagram__\n

  namespace edu.temple.homerecognition {
    class edu.temple.homerecognition.ArchitecturepediaActivity {
        ~ descriptions : ArrayList<String>
        ~ imageStyles : int[]
        ~ titles : ArrayList<String>
        # onCreate()
    }
  }
  

  namespace edu.temple.homerecognition {
    interface edu.temple.homerecognition.Database {
        {abstract} + addHouse()
        {abstract} + addUser()
        {abstract} + getHouse()
        {abstract} + getUser()
    }
  }
  

  namespace edu.temple.homerecognition {
    class edu.temple.homerecognition.DatabaseMethods {
        + addHouse()
        + addUser()
        + getHouse()
        + getUser()
    }
  }
  

  namespace edu.temple.homerecognition {
    class edu.temple.homerecognition.House {
        + date : String
        + imagePath : String
        + location : Pair
        + style : String
        + time : String
    }
  }
  

  namespace edu.temple.homerecognition {
    class edu.temple.homerecognition.MainActivity {
        + createAccount()
        + login()
        + logout()
        + onCreateOptionsMenu()
        + onOptionsItemSelected()
        # onCreate()
    }
  }
  

  namespace edu.temple.homerecognition {
    class edu.temple.homerecognition.MapsActivity {
        - mMap : GoogleMap
        + onMapReady()
        # onCreate()
    }
  }
  

  namespace edu.temple.homerecognition {
    class edu.temple.homerecognition.User {
        + email : String
        + password : String
    }
  }
  

  edu.temple.homerecognition.ArchitecturepediaActivity -up-|> androidx.appcompat.app.AppCompatActivity
  edu.temple.homerecognition.DatabaseMethods .up.|> edu.temple.homerecognition.Database
  edu.temple.homerecognition.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  edu.temple.homerecognition.MainActivity o-- edu.temple.homerecognition.Database : db
  edu.temple.homerecognition.MapsActivity .up.|> com.google.android.gms.maps.OnMapReadyCallback
  edu.temple.homerecognition.MapsActivity -up-|> androidx.fragment.app.FragmentActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
